--- a/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
+++ b/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
@@ -43,9 +43,10 @@
 
 
                         <div class="form-group">
-                            <label>Publish On <small>(Hover input and click arrow for datepicker)</small></label>
-                            <input type="date"
+                            <label>Publish On</label>
+                            <input type="number"
                                    class="form-control"
+                                   bsDatepicker
                                    [class.invalid]="!f.date.valid && f.date.touched"
                                    formControlName="date">
                         </div>
@@ -87,10 +88,25 @@
 
                         <div class="form-group">
                             <label>Body</label>
-                            <textarea class="form-control"
-                                      rows="10"
-                                      formControlName="body">
-                            </textarea>
+                            <ckeditor
+                                    formControlName="body"
+                                    [readonly]="false"
+                                    (change)="onChange($event)"
+                                    (editorChange)="onEditorChange($event)"
+                                    (ready)="onReady($event)"
+                                    (focus)="onFocus($event)"
+                                    (blur)="onBlur($event)"
+                                    (contentDom)="onContentDom($event)"
+                                    (fileUploadRequest)="onFileUploadRequest($event)"
+                                    (fileUploadResponse)="onFileUploadResponse($event)"
+                                    (paste)="onPaste($event)"
+                                    (drop)="onDrop($event)"
+                                    debounce="500">
+                            </ckeditor>
+                            <!--<textarea class="form-control"-->
+                            <!--rows="10"-->
+                            <!--formControlName="body">-->
+                            <!--</textarea>-->
                             <p class="help-block alert alert-warning text-center mt-1"
                                *ngIf="!f.body.valid && f.body.touched">
                                 The <b>Body</b> with at least 100 characters is required!
