--- a/src/app/components/admin/admin-page/admin-page-details/admin-page-details.component.html
+++ b/src/app/components/admin/admin-page/admin-page-details/admin-page-details.component.html
@@ -34,6 +34,6 @@
 
     </div>
     <div class="card-footer">
-        <small class="text-muted">Publish Date: {{ page.date | date:'fullDate' }}</small>
+        <small class="text-muted">Publish Date: {{ page.date.toDate() | date:'fullDate' }}</small>
     </div>
 </div>
