--- a/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.html
+++ b/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.html
@@ -1,7 +1,7 @@
 <!-- * ADMIN-PAGE-LIST * -->
 <div class="row">
     <div class="container">
-        <div class="card-columns">
+        <div class="card-deck">
             <ddw-admin-page-item
                     *ngFor="let pageEl of page$ | async;"
                     [page]="pageEl">
