Added admin sidebar and navbar and converted users list into a table

--- a/src/app/components/admin/admin-core/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/components/admin/admin-core/admin-sidebar/admin-sidebar.component.html
@@ -1,1 +1,129 @@
-<p>Admin sidebar works!</p>
+<!-- Brand demo (see assets/css/demo/demo.css) -->
+<div class="app-brand demo">
+          <span class="app-brand-logo demo bg-primary">
+              <img src="https://higherlogicdownload.s3.amazonaws.com/GASTRO/44b1f1fd-aaed-44c8-954f-b0eaea6b0462/UploadedImages/ddw-color.png"
+                   alt="ddw logo" class="ddw-logo" style="max-width:100px;">
+          </span>
+    <a href="index.html" class="app-brand-text demo sidenav-text font-weight-normal ml-2">Appwork</a>
+    <a href="javascript:void(0)" class="layout-sidenav-toggle sidenav-link text-large ml-auto">
+        <i class="ion ion-md-menu align-middle"></i>
+    </a>
+</div>
+
+<div class="sidenav-divider mt-0"></div>
+
+<!-- Links -->
+<ul class="sidenav-inner py-1">
+
+    <!-- Dashboards -->
+    <li class="sidenav-item">
+        <a href="javascript:void(0)" class="sidenav-link sidenav-toggle">
+            <i class="sidenav-icon ion ion-md-speedometer"></i>
+            <div>Dashboards</div>
+        </a>
+
+        <ul class="sidenav-menu">
+            <li class="sidenav-item">
+                <a href="index.html" class="sidenav-link">
+                    <div>Dashboard 1</div>
+                </a>
+            </li>
+            <li class="sidenav-item">
+                <a href="dashboards_dashboard-2.html" class="sidenav-link">
+                    <div>Dashboard 2</div>
+                </a>
+            </li>
+            <li class="sidenav-item">
+                <a href="dashboards_dashboard-3.html" class="sidenav-link">
+                    <div>Dashboard 3</div>
+                </a>
+            </li>
+            <li class="sidenav-item">
+                <a href="dashboards_dashboard-4.html" class="sidenav-link">
+                    <div>Dashboard 4</div>
+                </a>
+            </li>
+            <li class="sidenav-item">
+                <a href="dashboards_dashboard-5.html" class="sidenav-link">
+                    <div>Dashboard 5</div>
+                </a>
+            </li>
+        </ul>
+    </li>
+
+    <!-- Layouts -->
+    <li class="sidenav-item">
+        <a href="javascript:void(0)" class="sidenav-link sidenav-toggle">
+            <i class="sidenav-icon ion ion-ios-albums"></i>
+            <div>Layouts</div>
+        </a>
+
+        <ul class="sidenav-menu">
+            <li class="sidenav-item">
+                <a href="layouts_options.html" class="sidenav-link">
+                    <div>Layout options</div>
+                </a>
+            </li>
+            <li class="sidenav-item">
+                <a href="layouts_helpers.html" class="sidenav-link">
+                    <div>Layout helpers</div>
+                </a>
+            </li>
+            <li class="sidenav-item">
+                <a href="layouts_layout-1.html" class="sidenav-link">
+                    <div>Layout 1</div>
+                </a>
+            </li>
+            <li class="sidenav-item">
+                <a href="layouts_layout-1-flex.html" class="sidenav-link">
+                    <div>Layout 1 (Flex)</div>
+                </a>
+            </li>
+            <li class="sidenav-item">
+                <a href="layouts_layout-2.html" class="sidenav-link">
+                    <div>Layout 2</div>
+                </a>
+            </li>
+            <li class="sidenav-item">
+                <a href="layouts_layout-2-flex.html" class="sidenav-link">
+                    <div>Layout 2 (Flex)</div>
+                </a>
+            </li>
+            <li class="sidenav-item">
+                <a href="layouts_without-navbar.html" class="sidenav-link">
+                    <div>Without navbar</div>
+                </a>
+            </li>
+            <li class="sidenav-item">
+                <a href="layouts_without-navbar-flex.html" class="sidenav-link">
+                    <div>Without navbar (Flex)</div>
+                </a>
+            </li>
+            <li class="sidenav-item">
+                <a href="layouts_without-sidenav.html" class="sidenav-link">
+                    <div>Without sidenav</div>
+                </a>
+            </li>
+            <li class="sidenav-item">
+                <a href="layouts_horizontal-sidenav.html" class="sidenav-link">
+                    <div>Horizontal sidenav</div>
+                </a>
+            </li>
+            <li class="sidenav-item">
+                <a href="layouts_blank.html" class="sidenav-link">
+                    <div>Blank</div>
+                </a>
+            </li>
+        </ul>
+    </li>
+
+    <li class="sidenav-divider mb-1"></li>
+    <li class="sidenav-header small font-weight-semibold">ELEMENTS</li>
+
+    <li class="sidenav-item">
+        <a href="typography.html" class="sidenav-link">
+            <i class="sidenav-icon ion ion-md-quote"></i>
+            <div>Typography</div>
+        </a>
+    </li>
+</ul>
