--- a/src/app/components/admin/admin-user/admin-user-item/admin-user-item.component.html
+++ b/src/app/components/admin/admin-user/admin-user-item/admin-user-item.component.html
@@ -1,12 +1,15 @@
-<a class="list-group-item d-flex justify-content-between align-items-center list-group-item-action users"
-   [routerLink]="['/admin/users/', user.uid]">
-    <img [src]="user.photoURL"
-         [alt]="user.displayName"
-         class="profile-image">
-    <span>{{ user.displayName }}</span>
-    <span>{{ user.loginDate | date:'fullDate' }}</span>
-    <span>Online: {{ user.isOnline }}</span>
-    <span class="badge badge-primary badge-pill">
-       Admin: {{ user.admin }}
-     </span>
-</a>
+<!--<a class="users"-->
+<!--[routerLink]="['/admin/users/', user.uid]">-->
+<tr>
+    <td scope="col">
+        <img [src]="user.photoURL"
+             [alt]="user.displayName"
+             class="profile-image">
+    </td>
+    <td scope="col">{{ user.displayName }}</td>
+    <td scope="col">{{ user.loginDate | date:'fullDate' }}</td>
+    <td scope="col">Online: {{ user.isOnline }}</td>
+    <td scope="col">Admin: {{ user.admin }}</td>
+
+</tr>
+<!--</a>-->
