--- a/src/app/components/admin/admin-user/admin-user-list/admin-user-list.component.html
+++ b/src/app/components/admin/admin-user/admin-user-list/admin-user-list.component.html
@@ -1,11 +1,77 @@
 <!-- * ADMIN-USER-LIST * -->
-<div class="row">
-    <div class="container">
-        <div class="list-group">
-            <ddw-admin-user-item
-                    *ngFor="let userEl of users$ | async;"
-                    [user]="userEl">
-            </ddw-admin-user-item>
+
+<!-- Layout content -->
+<div class="layout-content">
+    <!-- Content -->
+    <div class="container-fluid flex-grow-1 container-p-y">
+
+        <h4 class="font-weight-bold py-3 mb-4">
+            Users
+        </h4>
+
+        <div class="card">
+            <div class="card-datatable table-responsive">
+                <table id="user-list" class="table table-striped table-bordered">
+                    <thead>
+                    <tr>
+                        <th colspan="2">User</th>
+                        <th scope="col">Last Online</th>
+                        <th scope="col">Is Online</th>
+                        <th scope="col">Admin</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr *ngFor="let user of users$ | async;">
+                        <td scope="col">
+                            <img [src]="user.photoURL"
+                                 [alt]="user.displayName"
+                                 class="profile-image">
+                        </td>
+                        <td scope="col">{{ user.displayName }}</td>
+                        <td scope="col">{{ user.loginDate | date:'fullDate' }}</td>
+                        <td scope="col" style="text-align:center;">
+                                <span class="badge badge-outline-success" *ngIf="user.isOnline">
+                                    Yes
+                                </span>
+                            <span class="badge badge-outline-danger" *ngIf="!user.isOnline">
+                                    No
+                                </span>
+                        </td>
+                        <td scope="col" style="text-align:center;">
+                                <span class="badge badge-outline-success" *ngIf="user.admin">
+                                    Yes
+                                </span>
+                            <span class="badge badge-outline-danger" *ngIf="!user.admin">
+                                    No
+                                </span>
+                        </td>
+                    </tr>
+
+
+                    <!--<ddw-admin-user-item-->
+                    <!--*ngFor="let userEl of users$ | async;"-->
+                    <!--[user]="userEl">-->
+                    <!--</ddw-admin-user-item>-->
+                    </tbody>
+                </table>
+            </div>
         </div>
+
     </div>
+    <!-- / Content -->
+
+
 </div>
+<!-- Layout content -->
+
+
+<!--<div class="row">-->
+<!--<div class="container">-->
+<!--<div class="list-group">-->
+<!--<ddw-admin-user-item-->
+<!--*ngFor="let userEl of users$ | async;"-->
+<!--[user]="userEl">-->
+<!--</ddw-admin-user-item>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
