Added basic sidenav styling

--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -3,7 +3,7 @@
 <div class="layout-wrapper layout-2">
     <div class="layout-inner">
         <div id="layout-sidenav" class="layout-sidenav sidenav sidenav-vertical bg-dark">
-            <ddw-admin-sidebar></ddw-admin-sidebar>
+            <ddw-admin-sidenav></ddw-admin-sidenav>
         </div>
 
         <div class="layout-container">
