--- a/src/app/components/admin/admin-core/admin-signup/admin-signup.component.html
+++ b/src/app/components/admin/admin-core/admin-signup/admin-signup.component.html
@@ -4,7 +4,7 @@
             <div class="card-body">
                 <h1 class="text-center text-secondary pb-4 pt-3">
                     <span class="text-dark">
-               <img src="https://higherlogicdownload.s3.amazonaws.com/GASTRO/44b1f1fd-aaed-44c8-954f-b0eaea6b0462/UploadedImages/ddw-color.png"
+               <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/ddw-color.png"
                     alt="ddw logo" class="ddw-logo" style="max-width:200px;"> <br>
                         <i class="fa fa-user-lock"></i>&nbsp;Admin
                     </span> Signup
