--- a/src/app/components/admin/admin-core/admin-navbar/admin-navbar.component.html
+++ b/src/app/components/admin/admin-core/admin-navbar/admin-navbar.component.html
@@ -1,14 +1,14 @@
 <nav class="layout-navbar navbar navbar-expand-lg align-items-lg-center bg-white container-p-x" id="layout-navbar">
-    <a class="navbar-brand" href="#">DDW<sup>&reg;</sup> Admin</a>
+    <!--<a class="navbar-brand" href="#">DDW<sup>&reg;</sup> Admin</a>-->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <a class="nav-item nav-link" [routerLink]="['pages']"><i class="fa fa-file"></i>&nbsp;Pages</a>
-            <a class="nav-item nav-link" [routerLink]="['users']"><i class="fa fa-user"></i>&nbsp;Users</a>
-            <a class="nav-item nav-link" [routerLink]="['/']"><i class="fa fa-globe"></i>&nbsp;Live Site</a>
+            <!--<a class="nav-item nav-link" [routerLink]="['pages']"><i class="fa fa-file"></i>&nbsp;Pages</a>-->
+            <!--<a class="nav-item nav-link" [routerLink]="['users']"><i class="fa fa-user"></i>&nbsp;Users</a>-->
+            <!--<a class="nav-item nav-link" [routerLink]="['/']"><i class="fa fa-globe"></i>&nbsp;Live Site</a>-->
         </div>
     </div>
     <ul class="navbar-nav mx-auto">
