--- a/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
+++ b/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
@@ -1,19 +1,19 @@
 <!-- Brand demo (see assets/css/demo/demo.css) -->
-<div class="app-brand demo text-center pt-4 pb-3">
-          <span class="app-brand-logo demo">
+<div class="app-brand demo pt-4 pb-3">
+              <span class="app-brand-logo demo">
               <a [routerLink]="['/admin']">
-                  <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/ddw-gray-50.png"
-                       alt="ddw logo" class="ddw-logo p-1" style="max-width:50px;">
+                      <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/ddw-grey-100.png"
+                           alt="ddw logo" class="ddw-logo p-1">
               </a>
           </span>
-    <a [routerLink]="['/admin']"
-       class="app-brand-text demo sidenav-text font-weight-normal ml-2">
-        <b style="color:#ccc;">.org CMS</b>
-    </a>
 
-    <a class="layout-sidenav-toggle sidenav-link text-large ml-auto">
-        <i class="ion ion-md-menu align-middle"></i>
-    </a>
+    <!--<a [routerLink]="['/admin']"-->
+    <!--class="app-brand-text demo sidenav-text font-weight-normal ml-2">-->
+    <!--</a>-->
+
+    <!--<a class="layout-sidenav-toggle sidenav-link text-large ml-auto">-->
+    <!--<i class="ion ion-md-menu align-middle"></i>-->
+    <!--</a>-->
 </div>
 
 <div class="sidenav-divider mt-0"></div>
@@ -21,29 +21,10 @@
 <!-- Links -->
 <ul class="sidenav-inner py-1">
 
-    <!-- Users -->
-    <li class="sidenav-item" [ngClass]="{'active open':showUsersToggle, '':!showUsersToggle}">
-        <a class="sidenav-link sidenav-toggle" (click)="onShowUsersToggle()">
-            <i class="sidenav-icon ion ion-md-speedometer"></i>
-            <div><i class="fa fa-users"></i>&nbsp;Users</div>
-        </a>
-
-        <ul class="sidenav-menu">
-            <li class="sidenav-item sub-item">
-                <a href="#" class="sidenav-link">
-                    <div>All Users</div>
-                </a>
-            </li>
-            <li class="sidenav-item sub-item">
-                <a href="#" class="sidenav-link">
-                    <div>New User</div>
-                </a>
-            </li>
-        </ul>
-    </li>
-
-    <!-- Pages -->
-    <li class="sidenav-item" [ngClass]="{'active open':showPagesToggle, '':!showPagesToggle}">
+    <!-- * Pages * -->
+    <li class="sidenav-item"
+        [ngClass]="{'active open':showPagesToggle, '':!showPagesToggle}"
+        *ngIf="isLoggedIn">
         <a class="sidenav-link sidenav-toggle" (click)="onShowPagesToggle()">
             <i class="sidenav-icon ion ion-ios-albums"></i>
             <div><i class="fa fa-file"></i>&nbsp;Pages</div>
@@ -51,23 +32,48 @@
 
         <ul class="sidenav-menu">
             <li class="sidenav-item sub-item">
-                <a href="#" class="sidenav-link">
-                    <div>All Pages</div>
+                <a [routerLink]="['/admin/pages']" class="sidenav-link">
+                    <div><i class="fa fa-th-list"></i>&nbsp;All Pages</div>
                 </a>
             </li>
             <li class="sidenav-item sub-item">
-                <a href="#" class="sidenav-link">
-                    <div>New Page</div>
+                <a [routerLink]="['/admin/pages/new']" class="sidenav-link">
+                    <div><i class="fa fa-file-plus"></i>&nbsp;New Page</div>
                 </a>
             </li>
         </ul>
     </li>
 
-    <li class="sidenav-divider mb-1"></li>
+    <!-- * Users * -->
+    <li class="sidenav-item"
+        [ngClass]="{'active open':showUsersToggle, '':!showUsersToggle}"
+        *ngIf="isLoggedIn">
+        <a class="sidenav-link sidenav-toggle" (click)="onShowUsersToggle()">
+            <i class="sidenav-icon ion ion-md-speedometer"></i>
+            <div><i class="fa fa-users"></i>&nbsp;Users</div>
+        </a>
+
+        <ul class="sidenav-menu">
+            <li class="sidenav-item sub-item">
+                <a [routerLink]="['/admin/users']" class="sidenav-link">
+                    <div><i class="fa fa-th-list"></i>&nbsp;All Users</div>
+                </a>
+            </li>
+            <li class="sidenav-item sub-item">
+                <a [routerLink]="['/admin/users/new']" class="sidenav-link">
+                    <div><i class="fa fa-user-plus"></i>&nbsp;New User</div>
+                </a>
+            </li>
+        </ul>
+    </li>
+
+    <li class="sidenav-divider mb-1" *ngIf="isLoggedIn"></li>
+
+    <!-- * Extras * -->
     <li class="sidenav-header small font-weight-semibold">Extras</li>
 
-    <li class="sidenav-item">
-        <a href="typography.html" class="sidenav-link">
+    <li class="sidenav-item" *ngIf="isLoggedIn && allowSignup">
+        <a [routerLink]="['/admin/settings']" class="sidenav-link">
             <i class="sidenav-icon ion ion-md-quote"></i>
             <div><i class="fa fa-wrench"></i>&nbsp;Settings</div>
         </a>
@@ -82,9 +88,17 @@
     <div class="sidenav-divider mt-0"></div>
 
     <li class="sidenav-item" *ngIf="isLoggedIn">
-        <a class="nav-link"
-           style="cursor:pointer;"
-           (click)="onLogout()"><i class="fa fa-sign-out-alt"></i>&nbsp;Logout
+        <a class="sidenav-link"
+           (click)="onLogout()">
+            <i class="sidenav-icon ion ion-md-quote"></i>
+            <div><i class="fa fa-sign-out-alt"></i>&nbsp;Logout</div>
+        </a>
+    </li>
+
+    <li class="sidenav-item" *ngIf="!isLoggedIn">
+        <a [routerLink]="['/admin/login']" class="sidenav-link">
+            <i class="sidenav-icon ion ion-md-quote"></i>
+            <div><i class="fa fa-sign-in-alt"></i>&nbsp;Log In</div>
         </a>
     </li>
 </ul>
