--- a/src/app/components/admin/admin-user/admin-user-list/admin-user-list.component.html
+++ b/src/app/components/admin/admin-user/admin-user-list/admin-user-list.component.html
@@ -5,11 +5,11 @@
     <!-- Content -->
     <div class="container-fluid flex-grow-1 container-p-y">
 
-        <h4 class="font-weight-bold py-3 mb-4">
-            Users
-        </h4>
+        <div class="card p-3">
+            <h4 class="font-weight-bold py-3 mb-4 pl-2">
+                All Users
+            </h4>
 
-        <div class="card">
             <div class="card-datatable table-responsive">
                 <table id="user-list" class="table table-striped table-bordered">
                     <thead>
@@ -18,16 +18,23 @@
                         <th scope="col">Last Online</th>
                         <th scope="col">Is Online</th>
                         <th scope="col">Admin</th>
+                        <th scope="col">Options</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr *ngFor="let user of users$ | async;">
                         <td scope="col">
-                            <img [src]="user.photoURL"
-                                 [alt]="user.displayName"
-                                 class="profile-image">
+                            <a [routerLink]="['/admin/users/', user.uid]">
+                                <img [src]="user.photoURL"
+                                     [alt]="user.displayName"
+                                     class="profile-image">
+                            </a>
                         </td>
-                        <td scope="col">{{ user.displayName }}</td>
+                        <td scope="col">
+                            <a [routerLink]="['/admin/users/', user.uid]" class="displayName">
+                                {{ user.displayName }}
+                            </a>
+                        </td>
                         <td scope="col">{{ user.loginDate | date:'fullDate' }}</td>
                         <td scope="col" style="text-align:center;">
                                 <span class="badge badge-outline-success" *ngIf="user.isOnline">
@@ -45,16 +52,35 @@
                                     No
                                 </span>
                         </td>
+                        <td>
+                            <a class="btn btn-default btn-xs icon-btn md-btn-flat user-tooltip"
+                               [routerLink]="['/admin/users/', user.uid]">
+                                <i class="fa fa-pencil"></i>&nbsp;
+                            </a>
+                        </td>
                     </tr>
-
-
-                    <!--<ddw-admin-user-item-->
-                    <!--*ngFor="let userEl of users$ | async;"-->
-                    <!--[user]="userEl">-->
-                    <!--</ddw-admin-user-item>-->
                     </tbody>
                 </table>
             </div>
+
+            <nav aria-label="Page navigation example">
+                <ul class="pagination">
+                    <li class="page-item">
+                        <a class="page-link" [routerLink]="['/admin/users']" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                    </li>
+                    <li class="page-item"><a class="page-link" [routerLink]="['/admin/users']">1</a></li>
+                    <li class="page-item">
+                        <a class="page-link" [routerLink]="['/admin/users']" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+
         </div>
 
     </div>
@@ -64,6 +90,12 @@
 </div>
 <!-- Layout content -->
 
+
+<!-- * OLD * -->
+<!--<ddw-admin-user-item-->
+<!--*ngFor="let userEl of users$ | async;"-->
+<!--[user]="userEl">-->
+<!--</ddw-admin-user-item>-->
 
 <!--<div class="row">-->
 <!--<div class="container">-->
