--- a/src/app/components/admin/admin-user/admin-user-list/admin-user-list.component.html
+++ b/src/app/components/admin/admin-user/admin-user-list/admin-user-list.component.html
@@ -11,7 +11,7 @@
             </h4>
 
             <div class="card-datatable table-responsive">
-                <table id="user-list" class="table table-striped table-bordered">
+                <table id="user-list" class="table table-striped table-bordered table-hover">
                     <thead>
                     <tr>
                         <th colspan="2">User</th>
@@ -50,7 +50,7 @@
                                 </span>
                             <span class="badge badge-outline-danger" *ngIf="!user.admin">
                                     No
-                                </span>
+                            </span>
                         </td>
                         <td>
                             <a class="btn btn-default btn-xs icon-btn md-btn-flat user-tooltip"
