--- a/src/app/components/admin/admin-user/admin-user-new/admin-user-new.component.html
+++ b/src/app/components/admin/admin-user/admin-user-new/admin-user-new.component.html
@@ -1,7 +1,12 @@
-<div class="row mb-4">
-    <a class="text-primary back-users"
-       [routerLink]="['/admin/users']"><i class="fal fa-arrow-circle-left"></i>&nbsp;All Users
-    </a>
+<!-- * ADMIN-USER-NEW * -->
+<div class="row">
+    <div class="container">
+        <div class="row mb-4">
+            <a class="text-primary back-users"
+               [routerLink]="['/admin/users']"><i class="fal fa-arrow-circle-left"></i>&nbsp;All Users
+            </a>
+        </div>
+    </div>
 </div>
 
 <div class="row">
