--- a/src/app/components/admin/admin.component.css
+++ b/src/app/components/admin/admin.component.css
@@ -1,5 +1,5 @@
 /* Global Admin Styles */
-p, div, tr, th, tr, td, span {
+p, div, tr, th, tr, td, span, input.form-control {
     font-size: 14px;
 }
 
