--- a/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.css
+++ b/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.css
@@ -1,4 +1,4 @@
-.app-brand.demo {
+.app-brand.demo, li.active > ul {
     background-color: #1C202B;
 }
 
@@ -7,7 +7,7 @@ a.sidenav-link {
 }
 
 li.sidenav-item {
-    font-size: 0.95em;
+    font-size: 1em;
 }
 
 li.sub-item {
@@ -17,8 +17,8 @@ li.sub-item {
 .sidenav-vertical
 .sidenav-menu
 .sidenav-link {
-    padding-top: .3rem;
-    padding-bottom: .3rem;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
 }
 
 a.sidenav-link {
