--- a/src/app/components/admin/admin-user/admin-user-details/admin-user-details.component.html
+++ b/src/app/components/admin/admin-user/admin-user-details/admin-user-details.component.html
@@ -1,39 +1,87 @@
 <!-- * ADMIN-USER-DETAILS * -->
-<div class="row mb-4">
-    <a class="text-primary back-users"
-       [routerLink]="['/admin/users']"><i class="fal fa-arrow-circle-left"></i>&nbsp;All Users
-    </a>
+<div class="row">
+    <div class="container">
+        <div class="row mb-4">
+            <a class="text-primary back-users"
+               [routerLink]="['/admin/users']"><i class="fal fa-arrow-circle-left"></i>&nbsp;All Users
+            </a>
+        </div>
+    </div>
 </div>
 
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="card" *ngIf="user">
+                <div class="card-body">
+                    <div class="btn-group float-right"
+                         role="group"
+                         aria-label="Basic example">
+                        <a class="btn btn-secondary btn-sm"
+                           [routerLink]="['edit']">
+                            <i class="fa fa-pencil"></i>&nbsp;Edit
+                        </a>
+                        <a class="btn btn-warning btn-sm"
+                           [routerLink]="['/admin/users']">
+                            <i class="fa fa-undo"></i>&nbsp;Cancel
+                        </a>
+                        <button class="btn btn-danger btn-sm"
+                                (click)="onDeleteUser()">
+                            <i class="fa fa-trash"></i>&nbsp;Delete
+                        </button>
+                    </div>
+                    <img class="d-block ui-w-100 rounded-circle img-fluid" [src]="user.photoURL" [alt]="user.displayName">
 
-<div class="card" *ngIf="user">
-    <img class="card-img-top img-fluid" [src]="user.photoURL" [alt]="user.displayName">
-    <div class="card-body">
-        <div class="btn-group float-right"
-             role="group"
-             aria-label="Basic example">
-            <a class="btn btn-secondary btn-sm"
-               [routerLink]="['edit']">
-                <i class="fa fa-pencil"></i>&nbsp;Edit
-            </a>
-            <a class="btn btn-warning btn-sm"
-               [routerLink]="['/admin/users']">
-                <i class="fa fa-undo"></i>&nbsp;Cancel
-            </a>
-            <button class="btn btn-danger btn-sm"
-                    (click)="onDeleteUser()">
-                <i class="fa fa-trash"></i>&nbsp;Delete
-            </button>
+                    <table class="table table-striped mt-4">
+                        <tbody>
+                        <tr>
+                            <th scope="col">Username</th>
+                            <td>{{ user.displayName }}</td>
+                        </tr>
+                        <tr>
+                            <th scope="col">Title</th>
+                            <td>{{ user.title }}</td>
+                        </tr>
+                        <tr>
+                            <th scope="col">Email</th>
+                            <td>{{ user.email }}</td>
+                        </tr>
+                        <tr>
+                            <th scope="col">Admin</th>
+                            <td>
+                            <span class="badge badge-outline-success"
+                                  *ngIf="user.admin">
+                                Yes
+                            </span>
+                                <span class="badge badge-outline-danger"
+                                      *ngIf="!user.admin">
+                                No
+                            </span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="col">Online</th>
+                            <td>
+                            <span class="badge badge-outline-success"
+                                  *ngIf="user.isOnline">
+                               Yes
+                            </span>
+                                <span class="badge badge-outline-danger"
+                                      *ngIf="!user.isOnline">
+                                No
+                            </span>
+                            </td>
+
+                        </tr>
+                        </tbody>
+                    </table>
+
+
+                </div>
+                <div class="card-footer">
+                    <small class="text-muted">Last time online: {{ user.loginDate | date:'fullDate' }}</small>
+                </div>
+            </div>
         </div>
-        <h5 class="card-title">{{ user.displayName }}</h5>
-        <p class="card-text"><i>{{ user.title }}</i> <br>
-            {{ user.email }} <br>
-            Admin: {{ user.admin }} <br>
-            Online: {{ user.isOnline }}<br>
-        </p>
-
-    </div>
-    <div class="card-footer">
-        <small class="text-muted">Last time online: {{ user.loginDate | date:'fullDate' }}</small>
     </div>
 </div>
